<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragment_recipe_create">

    <fragment
        android:id="@+id/fragment_recipe_create"
        android:name="com.foodknalledge.reci_app.CreateRecipeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_create_recipe" />

    <fragment
        android:id="@+id/fragment_recipe_list"
        android:name="com.foodknalledge.reci_app.RecipeListFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipe_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.foodknalledge.reci_app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>